# data-structures-and-algorithms

./: .pre-commit-config.yaml  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
exercises/maximum-subsequence-sum/: Cargo.toml
exercises/maximum-subsequence-sum/benches/: bench_sum.rs
exercises/maximum-subsequence-sum/src/: lib.rs  main.rs
exercises/too-many-lists/: Cargo.toml
exercises/too-many-lists/src/: first.rs  first_rewritten_for_practice.rs  lib.rs  main.rs
notes/: 25.11.30-notes.md  25.12.01-bad-singly-linked-stack.md  25.12.02-bad-singly-linked-stack.md  25.12.07 Too many lists.md
